--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.0.10",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
